--- a/app/templates/bmc/html/com_members/members.css
+++ b/app/templates/bmc/html/com_members/members.css
@@ -81,6 +81,9 @@
   position: relative;
   margin: -2em 0em 2.5em 2em;
 }
+#page_main {
+  position: relative;
+}
 #page_main > #page_options {
   float: right;
   margin: 0;
