Fixes a few typos

--- a/components/com_tags/admin/help/en-GB/entries.phtml
+++ b/components/com_tags/admin/help/en-GB/entries.phtml
@@ -51,7 +51,7 @@
 					<dd>Copy items from one tag to another. This will essentially duplicate all associated data on a tag (aliases, items tagged, etc.) onto another tag.</dd>
 
 					<dt>Merge</dt>
-					<dd>Merge two or more tags. This will take all the associations, aliases, etc. from one or mroe tags and apply them to another tag.</dd>
+					<dd>Merge two or more tags. This will take all the associations, aliases, etc. from one or more tags and apply them to another tag.</dd>
 
 					<dt>New</dt>
 					<dd>Opens the editing screen to create a new tag.</dd>
