[style] Fixed search text and added mobile-menu position.
Need to add "About - Mobile" and "News - Mobile" with position
"mobile-menu" for items to show up on mobile.

Address Ticket #141

--- a/app/templates/bmc/css/site.css
+++ b/app/templates/bmc/css/site.css
@@ -40,6 +40,10 @@ button:hover {
   background: #eb6546;
   border-color: #eb6546;
 }
-.mobile-panel.show.menu .subpanel.search .label {
+.mobile-panel.show.menu .subpanel.search .label,
+.mobile-panel .subpanel.search .label {
   opacity: inherit;
+}
+.mobile-panel .subpanel.search .label {
+  font-size: 3rem;
 }
