--- a/app/templates/bmc/css/site.less
+++ b/app/templates/bmc/css/site.less
@@ -47,6 +47,11 @@ button {
   }
 }
 
-.mobile-panel.show.menu .subpanel.search .label {
+.mobile-panel.show.menu .subpanel.search .label,
+.mobile-panel .subpanel.search .label {
   opacity: inherit;
+}
+
+.mobile-panel .subpanel.search .label {
+  font-size: 3rem;
 }
