[style] Language changes and general style fixes.

--- a/app/templates/bmc/html/mod_reportproblems/mod_reportproblems.css
+++ b/app/templates/bmc/html/mod_reportproblems/mod_reportproblems.css
@@ -159,7 +159,7 @@
 #help a span {
 	padding: 0;
 	background: none;
-	color: #595A5C;
+	color: rgb(57, 60, 61);
 	height: auto;
 	display: block;
 	border: none;
