--- a/templates/bmc/html/com_projects/projects.less
+++ b/templates/bmc/html/com_projects/projects.less
@@ -71,6 +71,10 @@
 		position: relative;
 	}
 
+	#pimage {
+		margin: 1.5em 1em 1em 1.5em;
+	}
+
 	#member_options {
 		float: none;
 		position: absolute;
