[fix] Stop dusplaying user picture for Anonymous wishes

--- a/core/assets/less/layout.less
+++ b/core/assets/less/layout.less
@@ -454,6 +454,10 @@
 			position: relative;
 			.border-radius(@baseBorderRadius);
 			.box-shadow(0px 1px 2px rgba(0, 0, 0, 0.1));
+
+			&.anonymous {
+				background-image: url("'@{pathSystemImg}/user.svg");
+			}
 		}
 
 		// Content
